typos and links

--- a/tutorial/html/wrapper/index.html
+++ b/tutorial/html/wrapper/index.html
@@ -236,7 +236,7 @@
             <div class="col-md-9" role="main">
 
 <h1 id="wrapper">Wrapper</h1>
-<p>Wrappers can be employed to extend integrated <a href="http://www.rdocumentation.org/packages/mlr/functions/Learner.html">learners</a> with new functionality.
+<p>Wrappers can be employed to extend integrated <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">learners</a> with new functionality.
 The broad scope of operations and methods which are implemented as wrappers underline the flexibility of the wrapping approach:</p>
 <ul>
 <li><a href="../preproc/">Data preprocessing</a></li>
@@ -249,12 +249,12 @@ The broad scope of operations and methods which are implemented as wrappers unde
 <li><a href="http://www.rdocumentation.org/packages/mlr/functions/makeMulticlassWrapper.html">Multiclass extension</a> for binary-class learners</li>
 </ul>
 <p>All these operations and methods have a few things in common:
-First, they all wrap around <a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.html">mlr</a> <a href="http://www.rdocumentation.org/packages/mlr/functions/Learner.html">learners</a> and they return a new learner.
+First, they all wrap around <a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.html">mlr</a> <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">learners</a> and they return a new learner.
 Therefore learners can be wrapped multiple times.
 Second, they are implemented using a <em>train</em> (pre-model hook) and <em>predict</em> (post-model hook) method.</p>
 <h2 id="example-bagging-wrapper">Example: Bagging wrapper</h2>
 <p>In this section we exemplary describe the bagging wrapper to create a random forest which supports weights.
-To archive that we combine several decision trees from the <a href="http://www.rdocumentation.org/packages/rpart/">rpart</a> package to create our own custom random forest.</p>
+To achieve that we combine several decision trees from the <a href="http://www.rdocumentation.org/packages/rpart/">rpart</a> package to create our own custom random forest.</p>
 <p>First, we create a weighted toy task.</p>
 <pre class="prettyprint well"><code class="r">data(iris)
 task = makeClassifTask(data = iris, target = &quot;Species&quot;, weights = as.integer(iris$Species))
@@ -335,7 +335,7 @@ Let's have a look at the available hyperparameters of the fused learner:</p>
 #&gt; parms           untyped   -     -        -   -     -
 </code></pre>
 
-<p>We choose to tune the parameters <code>minsplit</code> and <code>bw.feats</code> for the <a href="http://www.rdocumentation.org/packages/mlr/functions/measures.html">mmce</a> using a <a href="http://www.rdocumentation.org/packages/mlr/functions/makeTuneControlRandom.html">random search</a> in a 3-fold CV:</p>
+<p>We choose to tune the parameters <code>minsplit</code> and <code>bw.feats</code> for the <a href="http://www.rdocumentation.org/packages/mlr/functions/measures.html">mmce</a> using a <a href="http://www.rdocumentation.org/packages/mlr/functions/TuneControl.html">random search</a> in a 3-fold CV:</p>
 <pre class="prettyprint well"><code class="r">ctrl = makeTuneControlRandom(maxit = 10)
 rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
 par.set = makeParamSet(
@@ -360,7 +360,7 @@ print(tuned.lrn)
 <li>The tuning wrapper sets parameters for the underlying model in slot <code>$next.learner</code> and calls its train method.</li>
 <li>Next learner is the bagging wrapper. The passed down argument <code>bw.feats</code> is used in the bagging wrapper training function, the argument <code>minsplit</code> gets passed down to <code>$next.learner</code>.
    The base wrapper function calls the base learner <code>bw.iters</code> times and stores the resulting models.</li>
-<li>The bagged models are evaluated using the mean <code>mmce</code> (default aggregation for this performance measure) and new parameters are selected using the tuning method.</li>
+<li>The bagged models are evaluated using the mean <a href="http://www.rdocumentation.org/packages/mlr/functions/measures.html">mmce</a> (default aggregation for this performance measure) and new parameters are selected using the tuning method.</li>
 <li>This is repeated until the tuner terminates. Output is a tuned bagged learner.</li>
 </ol>
 <pre class="prettyprint well"><code class="r">lrn = train(tuned.lrn, task = task)
