--- a/tutorial/html/train/index.html
+++ b/tutorial/html/train/index.html
@@ -314,7 +314,7 @@ Therefore you usually do not have to subset the data yourself.</p>
 that reflect the relevance of examples in the training process.</p>
 <p>For example, in the <a href="http://www.rdocumentation.org/packages/mlbench/functions/BreastCancer.html">BreastCancer</a> data set class benign is almost
 twice as frequent as class malignant.
-If both classes should have equal importance in training the classifier we can weigh the
+If both classes should have equal importance in training the classifier we can weight the
 examples according to the class frequencies in the data set as shown in the following
 <strong>R</strong> code (see also the section about <a href="../over_and_undersampling/">imbalanced classification problems</a>).</p>
 <pre class="prettyprint well"><code class="r">## Calculate the observation weights
