--- a/tutorial/html/feature_selection/index.html
+++ b/tutorial/html/feature_selection/index.html
@@ -302,7 +302,7 @@ features of lower importance.</p>
 <p>There are several ways to select a feature subset based on feature importance values:</p>
 <ul>
 <li>Keep a certain <em>absolute number</em> (<code>abs</code>) of features with highest importance.</li>
-<li>Keep a certain <em>percentage</em> (<code>`perc</code>) of features with highest importance.</li>
+<li>Keep a certain <em>percentage</em> (<code>perc</code>) of features with highest importance.</li>
 <li>Keep all features whose importance exceeds a certain <em>threshold value</em> (<code>threshold</code>).</li>
 </ul>
 <p>Function <a href="http://www.rdocumentation.org/packages/mlr/functions/filterFeatures.html">filterFeatures</a> supports these three methods as shown in the following example.
